force-app/main/default/objects/DC_Wrapper__mdt/DC_Wrapper__mdt.object-meta.xml
<CustomObject>
    <label>DC_Wrapper</label>
    <pluralLabel>DC_Wrappers</pluralLabel>
</CustomObject>