force-app/main/default/objects/DC_Wrapper__mdt/fields/Card_Header_Style__c.field-meta.xml
<CustomField>
    <fullName>Card_Header_Style__c</fullName>
    <label>Card Header Style</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page Header</fullName>
                <default>true</default>
                <label>Page Header</label>
            </value>
            <value>
                <fullName>Einstein</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>