force-app/main/default/objects/DC_Wrapper__mdt/fields/Data_Path__c.field-meta.xml
<CustomField>
    <fullName>Data_Path__c</fullName>
    <label>Data Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>