force-app/main/default/objects/DC_Wrapper__mdt/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Compact Layout</fullName>
                <default>true</default>
                <label>Compact Layout</label>
            </value>
            <value>
                <fullName>Detail Page</fullName>
            </value>
            <value>
                <fullName>Table</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>