force-app/main/default/objects/DC_Wrapper__mdt/fields/Hide_Card_Header__c.field-meta.xml
<CustomField>
    <fullName>Hide_Card_Header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>check when you want to remove card header</description>
    <label>Hide Card Header</label>
    <type>Checkbox</type>
</CustomField>