force-app/main/default/objects/DC_Wrapper__mdt/fields/Illustration__c.field-meta.xml
<CustomField>
    <fullName>Illustration__c</fullName>
    <label>Illustration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Desert</fullName>
                <default>true</default>
                <label>Desert</label>
            </value>
            <value>
                <fullName>NoAssistant</fullName>
                <label>No Assistant</label>
            </value>
            <value>
                <fullName>NoEvents</fullName>
                <label>No Events</label>
            </value>
            <value>
                <fullName>NoTasks</fullName>
                <label>No Tasks</label>
            </value>
            <value>
                <fullName>OpenRoad</fullName>
                <label>Open Road</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>