force-app/main/default/objects/DC_Wrapper__mdt/fields/Illustration_Size__c.field-meta.xml
<CustomField>
    <fullName>Illustration_Size__c</fullName>
    <label>Illustration Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>small</fullName>
            </value>
            <value>
                <fullName>large</fullName>
                <default>true</default>
                <label>large</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>