force-app/main/default/objects/DC_Wrapper__mdt/fields/Is_Nested_Card__c.field-meta.xml
<CustomField>
    <fullName>Is_Nested_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <description>click when your component inside another card and you want to show borders</description>
    <label>Is Nested Card</label>
    <type>Checkbox</type>
</CustomField>