force-app/main/default/objects/DC_Wrapper__mdt/fields/Max_Row_Selection__c.field-meta.xml
<CustomField>
    <fullName>Max_Row_Selection__c</fullName>
    <inlineHelpText>The value should be a positive integer
Checkboxes are used for selection by default,
and radio buttons are used when maxRowSelection is 1
If zero or negetive is selected the row selection is hidden</inlineHelpText>
    <label>Max Row Selection</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>