force-app/main/default/objects/DC_Wrapper__mdt/fields/No_Data_Message__c.field-meta.xml
<CustomField>
    <fullName>No_Data_Message__c</fullName>
    <label>No Data Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>