force-app/main/default/objects/DC_Wrapper__mdt/fields/Service_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Service_Endpoint__c</fullName>
    <label>Service Endpoint</label>
    <referenceTo>Service_Endpoint__mdt</referenceTo>
    <relationshipName>dc_wrappers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>