force-app/main/default/objects/DC_Wrapper__mdt/fields/Show_Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Show_Row_Number__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Row Number</label>
    <type>Checkbox</type>
</CustomField>